# taskflow

./: .dev.env  Cargo.toml  README.md  cspell.json
.sqlx/: query-20fa3bfb05bb69da3efbfc39c0bf5394ff2d5379fef3690b5e2c061bbf820f65.json  query-a59a634d3c354658ade229e787ca5e9fcf660b4e0b2a762a3fbd240055e4ee00.json  query-c90a4a9b865f96b127458fc5bcd9da2492000d37d144e4b409c860e1d4022d02.json  query-d0d70626edce2be35b8df3fdbf0e518b84f16d2e3cf6a05ad35684ceb2d506c5.json  query-e4dd1d121c4297aa1967a98763e81036cd9080d5247f30679efdddba5291abb9.json
migrations/: 20251221070234_create_users_table.sql
src/: app.rs  main.rs
src/config/: mod.rs  types.rs
src/domain/: auth.rs  mod.rs  task.rs  user.rs
src/error/: app.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/repositories/: mod.rs  task.rs  user.rs  user_repository.rs
src/routes/: auth.rs  health.rs  mod.rs
src/routes/auth/: handlers.rs  mod.rs  types.rs
src/routes/task/: handlers.rs  mod.rs  types.rs
src/service/: auth.rs  mod.rs
src/state/: db.rs  mod.rs  types.rs
src/ws/: event.rs  handler.rs  mod.rs  state.rs
