[package]
name = "taskflow"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5"
axum = "0.8.7"
config = "0.15.19"
dotenvy = "0.15.7"
password-hash = "0.5"
rand_core = "0.6"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }